have GPL readers avoid Double construction